# Water

./: .gitignore  CMakeLists.txt  README.md  astnode.cpp  astnode.h  compile  constants.cpp  constants.h  debug  errors.h  gdb_config  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  test  test.h2o  token.cpp  token.h  token_stream.cpp  token_stream.h  value.cpp  value.h
source/: astnode.cpp  astnode.h  constants.cpp  constants.h  errors.cpp  errors.h  global_scope.cpp  global_scope.h  iohelpers.cpp  iohelpers.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  parser_scope.cpp  parser_scope.h  runtime_errors.h  scope.cpp  scope.h  table.h  token.cpp  token.h  token_stream.cpp  token_stream.h  utility.h  value.cpp  value.h
tests/: arguments.h2o  array.h2o  array.h2o.expected  assignments.h2o  assignments.h2o.expected  closures.h2o  comments.h2o  comments.h2o.expected  count_down.h2o  count_down.h2o.expected  empty_blocks.h2o  empty_blocks.h2o.expected  for_loops.h2o  for_loops.h2o.expected  functional.h2o  functional.h2o.expected  global_blocks.h2o  loops.h2o  math.h2o  math.h2o.expected  meta_functions.h2o  null.h2o  null.h2o.expected  object_functions.h2o  object_functions.h2o.expected  objects.h2o  objects.h2o.expected  printing.h2o  printing.h2o.expected  read.h2o  read.h2o.expected  read.h2o.input  reference_semantics.h2o  reference_semantics.h2o.expected  scopes.h2o  strings.h2o  strings.h2o.expected  test.h2o  test.h2o.expected  test2.h2o  (+3 more)
vimfiles/: ftdetect.vim  syntax.vim
